<resources>
    <string name="app_name">Ello.ie</string>
    <string name="package_name">com.brains.ello</string>
    <string name="version">Version 1.1</string>
    <string name="base_url">"https://ello.ie/api/"</string>
    <string name="share_url">"https://ello.ie/admin/login"</string>
    <string name="redirect_url">"https://ello.ie/"</string>
    <string name="channel_id">Ello</string>
    <string name="facebook_app_id">1300759853395162</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">d9872c87d7cf64f45ef7d8b36aa80715</string>
    <string name="facebook_app_provider">com.facebook.app.FacebookContentProvider1300759853395162</string>
    <string name="google_maps_key">AIzaSyBFnUY1-OQ9rFsvX4p8O94ElCGR-mo8OkM</string>
    <string name="google_play_publish_key">"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgaX/dENMYNX3DLHDBPH6qitOpnBBLw4osWGy/xaxM9ob3FviDqM+OFp/HKX34OzGpWLx5QllxkyBYQqDvNtmGtc/C5VvlFaaHdiPX+6vQax9AVLtK9W6eMqMCcpuDyWjdJXLm6xkovgXkexk8MBAdw6bDoK00ThRDf5rB8gzazJVUmLIsvANYLcQKzQcbWDxRo6dMdx1zpAK82MUutpi6tuhxkUFJYfan1UM9BYzhv+w37GgMampcw7dYQcHEvH7gtUyCFpEwGKAOBNWbYjIe2TJTlOTIrMqq+8yoIdsiGB0kNTnhfelmWFXqblqu7uUhd2EP2n9cNoTk9vnWLyfYwIDAQAB"</string>
    <string name="payment_type">"play_store"</string>
    <string name="help_url">"contacts"</string>
    <string name="privacy_url">"page/privacy_policy"</string>
    <string name="terms_url">"page/terms_of_use"</string>
    <string name="iap_boost_1">"1_boost"</string>
    <string name="iap_boost_5">"5_boost"</string>
    <string name="iap_boost_10">"10_boost"</string>
    <string name="iap_superlike_5">"5_super_likes"</string>
    <string name="iap_superlike_25">"25_super_likes"</string>
    <string name="iap_superlike_60">"60_super_likes"</string>
    <string name="iap_gold_1">"igniter_gold_monthly"</string>
    <string name="iap_gold_6">"igniter_gold_half_yearly"</string>
    <string name="iap_gold_12">"igniter_gold_yearly"</string>
    <string name="iap_plus_1">"igniter_plus_monthly"</string>
    <string name="iap_plus_6">"igniter_plus_half_yearly"</string>
    <string name="iap_plus_12">"igniter_plus_yearly"</string>
    <string name="leanhowfb">https://www.accountkit.com/faq</string>
    <string name="cookieuse">https://m.facebook.com/policies/cookies/</string>
    <string name="phone_number">+917904832423</string>
    <string name="chat_conversation_title">%1$s</string>
    <string name="you_matched">"You matched with "</string>
    <string name="tell_us_why">"Tell us why..."</string>
    <string name="report_user">"Report User"</string>
    <string name="report_user_msg">"This is the person bothering you? Tell us what they did"</string>
    <string name="unmatch">"Unmatch"</string>
    <string name="search_location">"Search locations"</string>
    <string name="chat_msg">"Staring at this screen won't start a conversation"</string>
    <string name="done">Done</string>
    <string name="ok">Okay</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="please_enable_permissions">Please enable app permissions</string>
    <string name="please_enable_location">Please enable location services</string>
    <string name="network_failure">Please check your Internet Connection</string>
    <string name="internal_server_error">Please try again after sometimes.</string>
    <string name="login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="login_phone_number">LOG IN WITH PHONE NUMBER</string>
    <string name="login_take_policy">We take your policy seriously</string>
    <string name="login_arrow">We don\'t post anything to Facebook.</string>
    <string name="login_terms_policy">By signing in, you agree with our <![CDATA[<u>Terms of\n Service</u> and <u>Privacy Policy</u>]]></string>
    <string name="login_do_not_contact">Other user cannot contact you unless you\'ve\n already been matched.</string>
    <string name="settings">SETTINGS</string>
    <string name="edit_info">EDIT INFO</string>
    <string name="igniter_plus">GET &appname; PLUS</string>
    <string name="my_igniter_plus">MY &appname; PLUS</string>
    <string name="already_purchased">"Restore Failed. Your subscription is currently tied to an existing &appname;
        account."</string>
    <string name="friends_connect_description">We compare your Facebook friends with those of your matches to display any common connections.</string>
    <string name="header_settings">Settings</string>
    <string name="header_edit_info">Edit Profile</string>
    <string name="header_igniter_plus">Get &appname; Plus</string>
    <string name="header_igniter_gold">Get &appname; Gold</string>
    <string name="header_username">Username</string>
    <string name="friends_connect_count">25 Friends for Common Connections</string>
    <string name="recommend_friend">Recommend</string>
    <string name="share_guy">"I found a guy for you. Get on &appname; and let me know what you think :)"</string>
    <string name="share_girl">"I found a girl for you. Get on &appname; and let me know what you think :)"</string>
    <string name="recommend_to_friend">TO A FRIEND</string>
    <string name="recommend_to_friends">to Friends </string>
    <string name="get_gold">"Get &appname; Gold"</string>
    <string name="my_gold">"My &appname; Gold"</string>
    <string name="group_max_count">You can add up to 3 friends</string>
    <string name="create_group_title">Create a group to swipe with friends</string>
    <string name="choose_friend">Choose at least 1 friend to continue</string>
    <string name="messages">Messages</string>
    <string name="new_matches">New Matches</string>
    <string name="get_swipe">Get swiping</string>
    <string name="chat_empty_message">"When you match with other users \n they'll" appear here where you can send them a message"</string>
    <string name="search">Search</string>
    <string name="match_title">It\'s a Match!</string>
    <string name="match_description">You and %s have liked each other.</string>
    <string name="matches">Matches</string>
    <string name="send_message">SEND A MESSAGE</string>
    <string name="keep_swiping">KEEP SWIPING</string>
    <string name="tell_friends">Tell your friends</string>
    <string name="send_a_message">Type a message...</string>
    <string name="gif">GIF</string>
    <string name="phone_title">Enter your mobile number</string>
    <string name="phone_desc">\t Tap Next to verify your account with One Time Password powered by &appname;. An SMS may be sent to verify your number.</string>
    <string name="next">Next</string>
    <string name="otp_title">Enter the code that was sent to</string>
    <string name="continue_btn">Continue</string>
    <string name="resend_code">I didn\'t receive a code</string>
    <string name="accept_term_policy">"Tap Continue to accept Facebook\'s <![CDATA[<u>Terms,</u> <u>Data Policy</u> and <u>cookie use</u> and the <u>Privacy Policy</u> and <u>Terms of Service</u>]]> of &appname;.</string>
    <string name="accept_term_policys">"<![CDATA[The <u>Privacy Policy</u> and <u>Terms of Service</u>]]> of &appname;.</string>
    <string name="resent_title">If you haven\'t received a code:</string>
    <string name="verify_mobile_number">Verify your mobile number</string>
    <string name="sms_inbox">Check your SMS inbox</string>
    <string name="send_sms_again">Send SMS Again</string>
    <string name="code_from_voice_call">Enter your code from Voice Call</string>
    <string name="valid_phone_number_alert">Please enter a valid phone number.</string>
    <string name="try_again">Try Again</string>
    <string name="try_again_icon">!</string>
    <string name="verify_code_error_msg">We couldn\'t verify your code.\nPlease try again.</string>
    <string name="verifying_number">Verifying your number…</string>
    <string name="verifying_code">Verifying your code…</string>
    <string name="verified">Verified!</string>
    <string name="sent">Sent!</string>
    <string name="i_am_a">I am a</string>
    <string name="woman">GIRL</string>
    <string name="man">GUY</string>
    <string name="first_name_title">My first\nname is</string>
    <string name="first_name">First Name</string>
    <string name="last_name_title">My last\nname is</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_description">This is how it will appear in Ello.ie</string>
    <string name="password_title">My\npassword is</string>
    <string name="password_hint">Password</string>
    <string name="password_restriction">Your password should contain 1 letter, 1 number, and at least 8 characters.</string>
    <string name="birthday_title">My\nbirthday is</string>
    <string name="birthday_hint"> D  D / M  M / Y  Y  Y  Y </string>
    <string name="birthday_description">Minimum age should be %d.</string>
    <string name="email_title">My\nemail is</string>
    <string name="email_hint">Email address</string>
    <string name="password_valid">Your password is valid.</string>
    <string name="email_description">Needed to keep your account secure.</string>
    <string name="signup">SIGN UP</string>
    <string name="skip">SKIP</string>
    <string name="profile_pick_title">My\nbest pic is</string>
    <string name="profile_pick_alert">Please select your profile picture.</string>
    <string name="add_photo">Add your photo</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Camera roll</string>
    <string name="plus_sign">+</string>
    <string name="t_plus">I+</string>
    <string name="deleteDescription">While deleting account, you will not be shown in the card stack. And deleting account require final action from admin side.</string>
    <string name="deleteAccount">Delete My Account</string>
    <string name="get_more">Get more</string>
    <string name="refill">Tap to Refill Now</string>
    <string name="find_people">Searching... Expand your search criteria to see more people</string>
    <string name="no_one">Searching... Expand your search criteria to see more people</string>
    <string name="gold_dec">Unlock Our Most Exclusive Features</string>
    <string name="plus_dec">Unlimited Likes &amp; More!</string>
    <string name="get_boosts">Get Boosts</string>
    <string name="get_super_likes">Get Super Likes</string>
    <string name="crop_image_menu_crop">Done</string>
    <string name="discovery_setting">Discovery Settings</string>
    <string name="swipe_in">Swiping in</string>
    <string name="current_location">My Current Location</string>
    <string name="power_on">Power On</string>
    <string name="add_new_location">Add a new location</string>
    <string name="swipe_description">Change your swipe location to see &appname; members in other cities.</string>
    <string name="show_me">Show Me</string>
    <string name="app_setting">App Settings</string>
    <string name="notifications">Notifications</string>
    <string name="message_like">Message Likes</string>
    <string name="super_like">Super Likes</string>
    <string name="show_distance">Show Distances in</string>
    <string name="km">Km.</string>
    <string name="mile">Mi.</string>
    <string name="hint_about">About Me</string>
    <string name="job_title">Job Title</string>
    <string name="hint_job_title">Add job title</string>
    <string name="company_title">Company</string>
    <string name="hint_company">Add company</string>
    <string name="school">School</string>
    <string name="hint_school">Add school</string>
    <string name="show_instagram_photos">Show my Instagram Photos</string>
    <string name="instagram">Instagram</string>
    <string name="connect">Connect</string>
    <string name="gender">Gender</string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>
    <string name="control_profile">Control Your Profile</string>
    <string name="hide_my_age">Don\'t Show My Age</string>
    <string name="hide_my_distance">Make My Distance Invisible</string>
</resources>