<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.obs.CustomTextView
        style="@style/proximanova_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_setting"
        android:textColor="@color/text_very_dark"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:cardCornerRadius="3dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.obs.CustomTextView
                android:id="@+id/tv_notifications"
                style="@style/proximanova_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notifications"
                android:textColor="@color/igniter_red"
                android:textSize="18sp" />

            <com.obs.CustomTextView
                android:id="@+id/tv_new_matches"
                style="@style/proximanova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_notifications"
                android:text="@string/new_matches"
                android:textColor="@color/text_very_dark"
                android:textSize="17sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_new_matches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_notifications"
                android:checked="true" />

            <com.obs.CustomTextView
                android:id="@+id/tv_messages"
                style="@style/proximanova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_new_matches"
                android:layout_marginTop="20dp"
                android:text="@string/messages"
                android:textColor="@color/text_very_dark"
                android:textSize="17sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_new_matches"
                android:layout_marginTop="20dp" />

            <com.obs.CustomTextView
                android:id="@+id/tv_message_likes"
                style="@style/proximanova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_messages"
                android:layout_marginTop="20dp"
                android:text="@string/message_like"
                android:textColor="@color/text_very_dark"
                android:textSize="17sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_message_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_messages"
                android:layout_marginTop="20dp" />

            <com.obs.CustomTextView
                android:id="@+id/tv_super_likes"
                style="@style/proximanova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_message_likes"
                android:layout_marginTop="20dp"
                android:text="@string/super_like"
                android:textColor="@color/text_very_dark"
                android:textSize="17sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_super_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_message_likes"
                android:layout_marginTop="20dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <com.obs.CustomTextView
                android:id="@+id/tv_show_distance_title"
                style="@style/proximanova_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/show_distance"
                android:textColor="@color/igniter_red"
                android:textSize="18sp" />

            <com.obs.CustomTextView
                android:id="@+id/tv_show_distance"
                style="@style/proximanova_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/mile"
                android:textColor="@color/text_very_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rdg_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_show_distance_title"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_km"
                    style="@style/proximanova_semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_distance_bg"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/km"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@drawable/selector_distance_text_color"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_mi"
                    style="@style/proximanova_semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_distance_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mile"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@drawable/selector_distance_text_color"
                    android:textSize="18sp" />
            </RadioGroup>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
